k8s-manifests/docs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  labels:
    app: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: ghcr.io/soukupj00/ada502-fireguard-project-docs:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
