k8s-manifests/hivemq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: hivemq
  name: hivemq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hivemq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: hivemq
    spec:
      containers:
        - name: hivemq
          image: hivemq/hivemq-ce:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
              ephemeral-storage: "128Mi"
            limits:
              memory: "1Gi"
              cpu: "1000m"
              ephemeral-storage: "512Mi"
          ports:
            - containerPort: 1883
              protocol: TCP
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/hivemq/data
              name: hivemq-data-dev
      restartPolicy: Always
      volumes:
        - name: hivemq-data-dev
          persistentVolumeClaim:
            claimName: hivemq-data-dev
