k8s-manifests/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  template:
    metadata:
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          imagePullPolicy: IfNotPresent # This pulls from the public internet if not cached
          args:
            - start-dev
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
