k8s-manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: redis
  name: redis
spec:
  ports:
    - name: "6380"
      port: 6380
      targetPort: 6379
  selector:
    io.kompose.service: redis
